# vote_compass

./: .env  .flake8  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  index.html  party.json  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 0001_create_users_table.py  0002_create_core_tables.py
app/: main.py
app/api/v1/: answers.py  match.py  parties.py  questions.py  results.py  users.py
app/core/: config.py
app/data/: dimensions.json  parties.json  questions.json
app/db/: base.py  session.py
app/db/models/: answer.py  party.py  question.py  result.py  user.py
app/schemas/: answer.py  match.py  party.py  question.py  result.py  user.py
app/services/: advanced_model.py  answer_service.py  matcher.py  party_service.py  question_service.py  result_service.py
app/static/: style.css
app/static/js/: results.js
app/templates/: begin.html  index.html  quiz.html  results.html
tests/: conftest.py  test_match.py  test_questions.py  test_users.py
